--- a/src/pages/profilePages/addProduct/addProduct.scss
+++ b/src/pages/profilePages/addProduct/addProduct.scss
@@ -145,6 +145,19 @@
                     position: relative;
                     width: 100%;
 
+                    textarea {
+                        width: 100%;
+                        height: 200px;
+                        border-radius: 8px;
+                        background-color: #F8F8F8 !important;
+                        border: 2px solid #f2f2f2 !important;
+                        resize: none;
+                        border: none;
+                        padding: 10px;
+                        outline: none;
+                        font-size: 16px;
+                    }
+
                     .cheg {
                         display: flex;
                         gap: 20px;
