--- a/src/pages/addAnnounce/addAnnounce.scss
+++ b/src/pages/addAnnounce/addAnnounce.scss
@@ -110,6 +110,19 @@
             font-weight: 600;
         }
 
+        textarea {
+            width: 100%;
+            height: 200px;
+            border-radius: 8px;
+            background-color: #F8F8F8 !important;
+            border: 2px solid #f2f2f2 !important;
+            resize: none;
+            border: none;
+            padding: 10px;
+            outline: none;
+            font-size: 16px;
+        }
+
         .input-col {
             width: 50%;
             position: relative;
