--- a/src/pages/addAnnounce/addAnnounce.scss
+++ b/src/pages/addAnnounce/addAnnounce.scss
@@ -316,6 +316,7 @@
     #addAnnounce {
         padding-top: 0;
         margin-top: 85px;
+        margin-bottom: 80px;
 
         .to-back {
             background-color: #41A58D;
