--- a/src/pages/404Page/404Page.scss
+++ b/src/pages/404Page/404Page.scss
@@ -1,13 +1,42 @@
-#notfound {
-    height: 280px;
-    margin-top: 90px;
+#notFound {
+    height: 120vh;
     display: flex;
     align-items: center;
     justify-content: center;
     flex-direction: column;
+    background-color: #fff;
+    padding-top: 100px;
 
-    span {
-        font-size: 70px;
+    h2 {
+        color: #1E1E1E;
+        font-size: 20px;
         font-weight: 600;
+        margin-top: 15px;
+    }
+
+    p {
+        color: #757575;
+        margin-top: 10px;
+        width: 350px;
+        text-align: center;
+    }
+
+    a {
+        margin-top: 10px;
+        display: block;
+        padding: 10px 20px;
+        color: #fff;
+        background-color: #41A58D;
+        border-radius: 7px;
+    }
+}
+
+@media screen and (max-width: 500px) {
+    #notFound {
+        height: 100vh;
+        
+        img {
+            width: 200px;
+        }       
     }
 }
