--- a/src/pages/profilePages/addProduct/addProduct.scss
+++ b/src/pages/profilePages/addProduct/addProduct.scss
@@ -94,9 +94,8 @@
                     .check-inp {
                         display: none;
 
-                        &:checked~.checkbox {
+                        &:checked~.cheg-label .checkbox {
                             background-color: #41A58D;
-
 
                             span {
                                 left: 46%;
@@ -295,4 +294,56 @@
 
 .p-left-10 {
     padding-left: 10px !important;
+}
+
+@media screen and (max-width: 500px) {
+    .profile-container {
+        .profile-inner {
+            .right {
+                &.right-add-product {
+                    padding-bottom: 20px !important;
+                }
+                form {
+                    .input-row {
+                        &.fd-column {
+                            flex-direction: column !important;
+
+                            .inputs {
+                                width: 100% !important;
+                            }
+                        }
+                        .inputs {
+                            .cheg {
+                                flex-direction: column;
+                                align-items: flex-start;
+
+                                .cheg-label {
+                                    display: flex;
+                                    gap: 5px;
+                                }
+                            }
+                        }
+
+                        &.cheg-row {
+                            flex-direction: column;
+                            width: 100%;
+                        }
+
+                        .checkbox {
+                            width: 48px;
+
+                            span {
+                                width: 23px;
+                                height: 90%;
+
+                                &.active {
+                                    left: 50% !important;
+                                }
+                            }
+                        }
+                    }                   
+                }
+            }
+        }
+    }   
 }
