--- a/src/pages/profilePages/announce/likedAnnounces.scss
+++ b/src/pages/profilePages/announce/likedAnnounces.scss
@@ -110,3 +110,20 @@
     left: 50%;
     transform: translateX(-50%);
 }
+
+@media screen and (max-width: 500px) {
+    .profile-container {
+        .saved-container {
+            .right {
+                .announcements-cards {
+                    flex-direction: column;
+                    padding: 10px 0 0;
+
+                    .mobile-w-100 {
+                        width: 100%;
+                    }
+                }
+            }
+        }
+    }   
+}
