--- a/src/pages/profilePages/messages/messages.scss
+++ b/src/pages/profilePages/messages/messages.scss
@@ -485,3 +485,71 @@
         }
     }
 }
+
+@media screen and (max-width: 500px) {
+    #chatbox-prof {
+        width: 100%;
+        margin: 0;
+        // margin-top: 90px;
+        padding: 0;
+        background-color: transparent;
+        .chat-left {
+            padding: 20px 0;
+            border-radius: 10px;
+            width: 100%;
+            background-color: #fff;
+            // margin: 0 15px;
+            
+            #user-chats-list {
+                li {
+                    width: 100%;
+                }
+            }
+            &.mob-chat-left {
+                opacity: 0;
+                position: absolute;
+                z-index: -99;
+            }
+        }
+        .chat-right {
+            position: absolute;
+            left: 0;
+            z-index: -99;
+            opacity: 0;
+            width: 100%;
+            background-color: #fff;
+
+            &.mob-chat-right {
+                opacity: 1;
+                z-index: 99;
+                position: relative;
+                border-radius: 7px 7px 0 0;
+                .top {
+                    padding: 0;
+                    .desktop-chat-btn {
+                        display: none;
+                    }
+
+                    .mob-chat-btn {
+                        display: unset !important;
+                    }
+                }
+
+                .middle {
+                    border-radius: 0;
+                }
+
+                .send-message {
+                    padding: 0 20px;
+                    margin-bottom: 20px;
+                }
+            }
+        }
+    }
+
+    .modal-overlay, .delete-modal {
+        width: 90% !important;
+        left: 12px !important;
+        transform: translate(0, -50%) !important;
+    }
+}
