--- a/src/pages/profilePages/myCourses/myCourses.scss
+++ b/src/pages/profilePages/myCourses/myCourses.scss
@@ -13,7 +13,6 @@
   background-color: #fff;
   overflow: hidden;
   margin: 10px 0;
-  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
 
   &__image {
     width: 160px;
@@ -76,6 +75,30 @@
         height: 30px;
         border-radius: 50%;
         margin-right: 10px;
+      }
+    }
+  }
+}
+
+
+@media screen and (max-width: 500px) {
+  .profile-container {
+    .my-courses {
+      .my-courses-right {
+        padding-bottom: 0 !important;
+        padding-top: 0 !important;
+        background-color: transparent;
+        .my-course-card {
+          padding: 10px;
+          border-radius: 7px;
+          background-color: #fff;
+          flex-direction: column;
+
+          .my-course-card__image {
+            width: 100%;
+            height: 170px;
+          }
+        }
       }
     }
   }
