--- a/src/pages/profilePages/products/Products.scss
+++ b/src/pages/profilePages/products/Products.scss
@@ -324,3 +324,58 @@
         justify-content: center;
     }
 }
+
+@media screen and (max-width: 500px) {
+    .profile-container {
+        .profile-inner {
+            .right {
+                padding-bottom: 80px !important;
+                .tool {
+                    align-items: flex-start;
+                    flex-direction: column;
+                    row-gap: 10px;
+
+                    .tool-left {
+                        width: 100%;
+                        justify-content: space-between;
+                        align-items: center;
+
+                        label {
+                            width: unset;
+                        }
+                    }
+
+                    .tool-right {
+                        width: 100%;
+                        form {
+                            width: 100%;
+                            input {
+                                width: 100%;
+                            }
+                            
+                        }
+                        a {
+                            display: none;
+                        }
+                    }
+                }
+
+                .for-mobile {
+                    max-width: 500px;
+                    width: 100%;
+                    overflow-x: scroll;
+
+                    .user-table {
+                        width: 850px;
+                    }
+                }
+
+                .pagination-prof {
+                    bottom: 10px;
+                    flex-direction: column;
+                    row-gap: 15px;
+                }
+            }
+        }       
+    }
+}
