--- a/src/components/header/Header.scss
+++ b/src/components/header/Header.scss
@@ -620,7 +620,7 @@ header {
 
     .full-menu {
         bottom: 100%;
-        display: none;
+        // display: none;
         padding: 20px;
 
         .top-side,
