--- a/src/components/profileSideBar/profileSideBar.scss
+++ b/src/components/profileSideBar/profileSideBar.scss
@@ -2,7 +2,7 @@
     background-color: #FFFFFF;
     padding: 30px 24px;
     border-radius: 7px;
-    margin: 140px 20px 20px;
+    margin: 0 20px 20px;
 
     ul {
         li {
@@ -48,7 +48,7 @@
     #profileSideBar {
         width: 94%;
         margin: 0 10px;
-        margin-top: 90px;
+        margin-top: 100px;
 
         ul {
             li {
