--- a/src/pages/productDetail/productDetails.scss
+++ b/src/pages/productDetail/productDetails.scss
@@ -454,7 +454,7 @@
     .product-details {
 
         .to-back {
-            margin-top: 90px;
+            margin-top: 120px;
 
             .inner {
                 padding: 0 20px;
@@ -505,6 +505,7 @@
             }
 
             .similar-products {
+                justify-content: center;
                 .product-link {
                     width: 47%;
 
