--- a/src/components/newsFromWorkers/News.scss
+++ b/src/components/newsFromWorkers/News.scss
@@ -154,6 +154,7 @@
             }
             
             .productsInner {
+                justify-content: center;
 
                 .product-link {
                     width: 47%;
