--- a/src/components/topProducts/topProducts.scss
+++ b/src/components/topProducts/topProducts.scss
@@ -260,6 +260,7 @@
             }
             
             .productsInner {
+                justify-content: center;
 
                 .product-link {
                     width: 47%;
