--- a/src/pages/staticPages/about-project/aboutProject.scss
+++ b/src/pages/staticPages/about-project/aboutProject.scss
@@ -1,6 +1,6 @@
-#onlineShop {
-    padding: 176px 0 30px;
-    
+#aboutProject {
+    margin-top: 170px;
+
     .miniPoster {
         height: 250px;
         display: flex;
@@ -31,13 +31,70 @@
             font-weight: 600;
             color: #fff;
         }
-        
+
         img {
             position: relative;
             z-index: 2;
             width: 60%;
             height: 380px;
             object-fit: cover;
+        }
+    }
+
+    .about-hero {
+        max-width: 1366px;
+        margin: 0 auto;
+        padding: 50px;
+        background-color: #fff;
+        .hero-title {
+            font-size: 30px !important;
+        }
+
+        .title {
+            color: #1E1E1E;
+            margin-top: 20px;
+            font-size: 22px;
+            font-weight: 600;
+        }
+
+        .simpleText {
+            margin-top: 20px;
+            color: #757575;
+        }
+
+        .other-text {
+            width: 80%;
+            border-radius: 10px;
+            border-left: 5px solid #41A58D;
+            margin: 30px auto 0;
+            padding: 30px;
+            background-color: #F5F5F5;
+            position: relative;
+            
+            h2 {
+                color: #4B4B4B;
+                font-size: 20px;
+                position: relative;
+                z-index: 2;
+                width: 50%;
+                font-weight: 600;
+            }
+
+            p {
+                color: #757575;
+                font-size: 15px;
+                margin-top: 15px;
+                position: relative;
+                z-index: 2;
+                width: 50%;
+            }
+
+            img {
+                position: absolute;
+                right: 30px;
+                top: 50px;
+                z-index: 1;
+            }
         }
     }
 
@@ -58,11 +115,12 @@
         .left-side {
             margin-left: auto;
             width: 60%;
+
             .bigText {
                 display: flex;
                 justify-content: space-between;
                 align-items: center;
-    
+
                 p {
                     font-weight: 600;
                     color: #fff;
@@ -82,7 +140,7 @@
                         border-radius: 15px;
                         border: 1px solid #ffffff36;
                     }
-    
+
                     .work {
                         background-color: #B7B7B726;
                         padding: 10px 15px;
@@ -95,6 +153,7 @@
                 }
 
             }
+
             .smallText {
                 color: #fff;
                 width: 70%;
@@ -112,7 +171,7 @@
                 z-index: 1;
                 top: 50px;
             }
-            
+
             .shape {
                 width: 250px;
                 height: 250px;
@@ -121,7 +180,7 @@
                 position: absolute;
                 top: 50%;
                 transform: translateY(-50%);
-            
+
                 &::before {
                     position: absolute;
                     content: "";
@@ -150,54 +209,48 @@
             }
         }
     }
-
-    .cubes {
-        background-color: #F5F5F5;
-        padding: 30px 50px;
-
-        .cubesInner {
-            max-width: 1366px;
-            margin: 0 auto;
-            display: flex;
-            align-items: flex-start;
-            flex-wrap: wrap;
-            gap: 20px;
-            justify-content: space-between;
-
-            .cube {
-                width: 200px;
-                height: 200px;
-                background-color: #41A58D;
-                border-radius: 10px;
-            }
-        }
-    }
-}
-
-.search-bar-mobile-version {
-    display: none;
 }
 
 @media screen and (max-width: 500px) {
-    #onlineShop {
-        padding: 130px 0 30px;
+    #aboutProject {
+        margin-top: 120px;
         .miniPoster {
             margin-top: 0;
             flex-direction: column;
             justify-content: center;
             align-items: center;
-
+    
             .text {
                 width: 100%;
                 padding: 0 50px;
                 text-align: center;
                 margin-top: 10px;
             }
-
+    
             img {
                 width: 100%;
                 height: 170px;
                 top: 15px;
+            }
+        }
+
+        .about-hero {
+            padding: 20px;
+
+            .title {
+                font-size: 20px !important;
+            }
+
+            .other-text{
+                width: 90%;
+
+                h2 {
+                    width: 100%;
+                }
+
+                p {
+                    width: 100%;
+                }
             }
         }
 
@@ -216,6 +269,7 @@
                         font-size: 22px;
                         text-align: center;
                     }
+
                     .name {
                         display: none;
                     }
@@ -236,9 +290,9 @@
                 img {
                     width: 190px;
                     left: 50%;
-                    transform:  translateX( -50% );
+                    transform: translateX(-50%);
                 }
-            
+
                 .shape {
                     left: 50%;
                     transform: translate(-50%, -50%);
@@ -249,18 +303,6 @@
                         width: 170px;
                         height: 170px;
                     }
-                }
-            }
-        }
-
-        .cubes {
-            padding: 20px;
-
-            .cubesInner {
-                justify-content: center;
-                .cube {
-                    width: 47%;
-                    height: 150px;
                 }
             }
         }
