--- a/src/pages/addAnnounce/addAnnounce.scss
+++ b/src/pages/addAnnounce/addAnnounce.scss
@@ -1,5 +1,6 @@
 #addAnnounce {
-    padding-top: 160px;
+    padding-top: 170px;
+    background-color: #f5f5f5;
 
     .announceSelect {
         background-color: #fff;
