--- a/src/pages/register/login/login.scss
+++ b/src/pages/register/login/login.scss
@@ -235,13 +235,14 @@
 
 @media screen and (max-width: 500px) {
     #login {
-        margin: 0 13px 15px;
+        margin: 0;
         .login-header {
             .login-header-right {
                 display: none;
             }           
         }       
         .login-container {
+            margin: 0 12px;
             .login-top-text {
                 text-align: start;
 
